<resources>
    <string name="app_name">Story App</string>
    <string name="google_maps_key">AIzaSyCx1wd79JfnZ4uMRvQkVbgp81gmkGRIIOU</string>
    <string name="title_welcome_page">welcome to StoryApp!</string>
    <string name="message_welcome_page">Share your story of learning Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just on StoryApp!</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="title_login_page">Login to your Account</string>
    <string name="title_signup_page">Create your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="message_main_page">message Main Activity</string>
    <string name="logout">Logout</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="action_bar_title">Action Bar Title</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="password_error_message">Password must not be less than 8 characters</string>
    <string name="maps">maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_type">Default</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
</resources>